[tool.poetry]
name = "fastapi-bearer-auth"
version = "0.1.7"
description = ""
authors = ["ichuan <328225+ichuan@users.noreply.github.com>"]
readme = "README.md"

[tool.black]
# https://github.com/psf/black#configuration-format
line-length = 88
target-version = ['py310']
skip-string-normalization = true
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | node_modules/
)
'''

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "^0.115.6" }
pyjwt = "^2.10.1"
passlib = "^1.7.4"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pyright]
venvPath = "."
venv = ".venv"
reportGeneralTypeIssues = "none"
